metal-info-set/golden/P06M40_run11/metal40_macosx26/first_errors.txt
probe.metal:8:90: error: no member named 'atomic_max' in 'metal::texture1d_array<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_max_0(texture1d_array<uint, access::read_write> t) { t.atomic_max(0, 0, ulong4(0ul)); }
                                                                                       ~ ^
probe.metal:15:84: error: no member named 'atomic_max' in 'metal::texture1d<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_max_1(texture1d<uint, access::read_write> t) { t.atomic_max(0, ulong4(0ul)); }
                                                                                 ~ ^
probe.metal:22:90: error: no member named 'atomic_max' in 'metal::texture2d_array<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_max_2(texture2d_array<uint, access::read_write> t) { t.atomic_max(ushort2(0), 0, ulong4(0ul)); }
                                                                                       ~ ^
probe.metal:29:84: error: no member named 'atomic_max' in 'metal::texture2d<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_max_3(texture2d<uint, access::read_write> t) { t.atomic_max(ushort2(0), ulong4(0ul)); }
                                                                                 ~ ^
probe.metal:36:84: error: no member named 'atomic_max' in 'metal::texture3d<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_max_4(texture3d<uint, access::read_write> t) { t.atomic_max(ushort3(0), ulong4(0ul)); }
                                                                                 ~ ^
probe.metal:43:89: error: no member named 'atomic_max' in 'metal::texture_buffer<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_max_5(texture_buffer<uint, access::read_write> t) { t.atomic_max(0, ulong4(0ul)); }
                                                                                      ~ ^
probe.metal:50:92: error: no member named 'atomic_max' in 'metal::texturecube_array<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_max_6(texturecube_array<uint, access::read_write> t) { t.atomic_max(ushort2(0), 0, 0, ulong4(0ul)); }
                                                                                         ~ ^
probe.metal:57:86: error: no member named 'atomic_max' in 'metal::texturecube<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_max_7(texturecube<uint, access::read_write> t) { t.atomic_max(ushort2(0), 0, ulong4(0ul)); }
                                                                                   ~ ^
probe.metal:64:90: error: no member named 'atomic_min' in 'metal::texture1d_array<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_min_8(texture1d_array<uint, access::read_write> t) { t.atomic_min(0, 0, ulong4(0ul)); }
                                                                                       ~ ^
probe.metal:71:84: error: no member named 'atomic_min' in 'metal::texture1d<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_min_9(texture1d<uint, access::read_write> t) { t.atomic_min(0, ulong4(0ul)); }
                                                                                 ~ ^
probe.metal:78:91: error: no member named 'atomic_min' in 'metal::texture2d_array<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_min_10(texture2d_array<uint, access::read_write> t) { t.atomic_min(ushort2(0), 0, ulong4(0ul)); }
                                                                                        ~ ^
probe.metal:85:85: error: no member named 'atomic_min' in 'metal::texture2d<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_min_11(texture2d<uint, access::read_write> t) { t.atomic_min(ushort2(0), ulong4(0ul)); }
                                                                                  ~ ^
probe.metal:92:85: error: no member named 'atomic_min' in 'metal::texture3d<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_min_12(texture3d<uint, access::read_write> t) { t.atomic_min(ushort3(0), ulong4(0ul)); }
                                                                                  ~ ^
probe.metal:99:90: error: no member named 'atomic_min' in 'metal::texture_buffer<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_min_13(texture_buffer<uint, access::read_write> t) { t.atomic_min(0, ulong4(0ul)); }
                                                                                       ~ ^
probe.metal:106:93: error: no member named 'atomic_min' in 'metal::texturecube_array<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_min_14(texturecube_array<uint, access::read_write> t) { t.atomic_min(ushort2(0), 0, 0, ulong4(0ul)); }
                                                                                          ~ ^
probe.metal:113:87: error: no member named 'atomic_min' in 'metal::texturecube<unsigned int, metal::access::read_write, metal::memory_coherence_threadgroup>'
extern "C" void probe_p06m_atomic_min_15(texturecube<uint, access::read_write> t) { t.atomic_min(ushort2(0), 0, ulong4(0ul)); }
                                                                                    ~ ^
16 errors generated.
